@@ -14,6 +14,7 @@ sensord (0.6.42) unstable; urgency=low
     - DeclinationFilter can be forced to read and update declination value from gconf with declinationValue().
   * Improved FilterApiTests.
   * Fixed regression from CalibrationHandler: calibration_rate config entry didn't have any effect.
+  * Optimized InputDevAdaptor interval handling.
 
  -- Antti Virtanen <antti.i.virtanen@nokia.com>  Tue, 05 Apr 2011 15:01:35 +0200
 
